# ledge

./: .gitignore  Cargo.toml  README.md  TODO  backup.rs  entity.rs  frag.spv  physics.rs  shader.vert  sprite.rs  vert.spv  vulkano_shaders_frag.rs
docs/: .rustc_info.json
docs/doc/: search-index.js  settings.html  source-files.js
examples/: 00_graphics.rs  00_wireframe.rs  01_hello_world.rs  01_wave.rs  02_simple_level.rs  02_two_shaders.rs  03_color_wave.rs  03_triangle.rs  New Issue · vulkano-rs_vulkano.html  color_wave.rs  render_test.rs  sand-instancing.rs  sand.rs  sprite-batch.rs  text.rs  texture.rs
examples/shaders/: basic.frag  basic.vert  particle-alt.frag  particle-color.frag  particle-color.vert  particle.vert  texture.frag  wireframe.frag  wireframe.vert
src/: TODO  ToDo.txt  animation.rs  component.rs  conf.rs  entity.rs  error.rs  event.rs  game.rs  graphics.rs  input.rs  interface.rs  interfacecontext.rs  lib.rs  main.rs  old-main.rs  particle.frag  particle.vert  physics.rs  shader.frag  sprite.rs  system.rs  timer.rs  world.rs
src/asset/: handle.rs  mod.rs  storage.rs  types.rs  world.rs
src/ecs/: component.rs  entity.rs  join.rs  layeredbitmap.rs  mod.rs  storage.rs  system.rs
src/graphics/: animation.rs  backend.rs  buffer.rs  camera.rs  context.rs  encoder.rs  error.rs  image.rs  material.rs  mesh.rs  mod.rs  renderer.rs  shader.rs  sprite.rs  text.rs  texture.frag  texture.vert
src/input/: keyboard.rs  mouse.rs
src/physics/: entity.rs  mod.rs
src/scene/: error.rs  level.rs  mod.rs  stack.rs
src/scenes/: mod.rs  scene.rs
(+128 files in other folders)
