[package]
name = "ledge_engine"
version = "0.1.0"
authors = ["Daniel Irons <daniel.w.irons@protonmail.com>"]
edition = "2021"

[lib]
name = "ledge_engine"
path = "src/lib.rs"

[dependencies]
vulkano = "0.27"
vulkano-shaders = "0.27"
vulkano-win = "0.27"
winit = "0.25"
winit_input_helper = "0.10.0"
png = "0.17.2"
rand = "0.8.4"
cgmath = "0.18.0"