[package]
name = "ledge"
version = "0.1.0"
authors = ["Daniel Irons <daniel.w.irons@protonmail.com>"]
edition = "2021"

[lib]
name = "ledge"
path = "src/lib.rs"

[dependencies]
vulkano = { path = "../vulkano/vulkano" }
vulkano-shaders = "0.29"
vulkano-win = { path = "../vulkano/vulkano-win" }
winit = "0.26"
winit_input_helper = "0.10.0"
png = "0.17.2"
rand = "0.8.4"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
cgmath = "0.18.0"